# paladin

./: .gitignore  .squire.json  AGENTS.md  CLAUDE.md  _test_ast_merge.ts  bun-deps.json  bunfig.toml  npm-dependencies.json  package.json  squire — adding commands  test-setup.ts  tsconfig.json
apps/api/: package.json
apps/api/src/: index.ts  run-tests.ts  scaffold-project.ts  server.ts  vcs.ts
apps/api/src/handlers/: artifact-handler.ts  git-handler.ts  project-handler.ts
apps/api/src/hooks/: before-write.ts  ensure-bun-package-dependencies.ts
apps/api/src/utils/: parse-path.ts  path-ops.ts  resolve-path.ts  run-tests.ts
apps/claude-chat-downloader/: CHANGELOG.md  manifest.json  package.json  styles.css  tsconfig.json
apps/claude-chat-downloader/src/: background.ts  content.ts  scaffold.ts
apps/web/: package.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/tests/: .visual-meta.json  app.test.tsx  visual.test.ts
package-management/templates/: root.txt
python/: README.md  pyproject.toml
python/src/paladin/ai/: client.py
python/src/paladin/ai/tasks/: transcribe_pdf.py
python/src/paladin/pdf/utils/: render.py
scaffold-v2/: README.md
scripts/: add-user-bins-to-path.ts  apply-latest-conversation.ts  archive-current-repo-state.ts  debug-frontend-test.py  fix-path-comments.mjs  generate-bun-deps.ts  link-spv.ts  map-exports.ts  mochi-watch.ts  move-constants.ts  open-source.ts  paladin-api-bootstrap.ts  test-runner.py  test-runner.ts
squire/: PLAN.md  package.json
squire/src/: commands — ParsedArgs migration
(+16 files in other folders)
