[project]
name = "paladin"
version = "0.1.0"
description = "The paladin project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fitz>=0.0.1.dev2",
    "openai>=2.26.0",
]


[tool.uv]
dev-dependencies = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
